# clubimmo-workshop-contract

contract/: Cargo.toml
contract/src/: deal.rs  lib.rs
tests/: Cargo.toml
tests/src/: clubimmo_workshop.rs  deal.rs  lib.rs
