[package]
name = "contract"
version = "0.1.0"
authors = ["karandh <karan@casperlabs.io>","Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { package = "casper-contract", version = "0.7.0" }
casper-types = { package = "casper-types", version = "0.7.0" }
casperlabs_contract_macro = { package = "casperlabs_contract_macro", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
doctest = false
test = false
bench = false

[features]
default = ["casper-contract/std", "casper-types/std"]
